# blueTag

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  build.yml
.github/workflows/: deploy.yml  main.yml
src/: CMakeLists.txt  blueTag.c  blueTag.h  jep106.inc  tusb_config.h  usbDescriptors.c
src/.devcontainer/: Dockerfile  devcontainer.json
src/modules/cmsis-dap/: cmsisDAP.c
src/modules/cmsis-dap/bsp/rp2040/: DAP_config.h  cdc_uart.c  picoprobe_config.h
src/modules/flashProgrammer/: serProg.c  serProg.h
src/modules/openocd/: openocdHandler.c  openocdHandler.h  openocdJTAG.c  openocdSWD.c
src/modules/usb2serial/: LICENSE.md  uartBridge.c  uartBridge.h
